# Transcendence

./: .env.example  .gitignore  Makefile  README.md  architecture  create_fastify_project.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
auth-service/: Dockerfile  app-options.json  app-options.txt  package-lock.json  package.json
backend/: .cursorrules  .env  .env.example  .gitignore  Cargo.toml  README.md  config.toml
backend/data/: diesel.sqlite  diesel.sqlite-shm  diesel.sqlite-wal
backend/migrations/2025-11-29-185752-0000_create_users/: up.sql
backend/migrations/2025-11-29-190105-0000_create_sessions/: up.sql
backend/migrations/2025-12-15-012250-0000_create_two_fa_recovery_codes/: down.sql  up.sql
backend/migrations/2025-12-18-115022-0000_player_stats/: down.sql  up.sql
backend/migrations/2025-12-18-115028-0000_profile_features/: down.sql  up.sql
backend/migrations/2025-12-18-172824-0000_friendships/: down.sql  up.sql
backend/src/: db.rs  error.rs  main.rs  models.rs  prelude.rs  routers.rs  schema.rs  utils.rs  validate.rs
backend/src/auth/: hoops.rs  mod.rs  router.rs  session_token.rs  two_factor.rs  user.rs  util.rs
backend/src/config/: log_config.rs  mod.rs
backend/src/hoops/: auth.rs
backend/src/routers/: auth.rs  friends.rs  game.rs  profile.rs  users.rs
backend/src/stream/: compress_cbor_codec.rs  mod.rs  stream_manager.rs
backend/src/utils/: adaptive_buffer.rs  limiter.rs  logger.rs  mod.rs
backend/test-requests/auth/: hello.http  login.http  logout.http  register.http
docs/: auth.md  infos.md  (+6 more)
(+108 files in other folders)
